<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="en">

    <string name="app_name">万城拼车(司机端)</string>
    <string name="contentdescription"></string>

    <string name="tv_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="tv_username">账号</string>
    <string name="tv_password">密码</string>
    <string name="hint_password">请输入密码(不小于6位)</string>
    <string name="hint_username">请输入手机号</string>
    <string name="tv_sendcode">发送验证码</string>
    <string name="tv_sendagain">重新发送</string>
    <string name="hint_username1">请输入你的手机号</string>
    <string name="hint_code">请输入验证码</string>
    <string name="hint_password1">新密码</string>
    <string name="hint_password2">确认新密码</string>
    <string name="tv_submit">提交</string>
    <string name="tv_gonext">下一步</string>
    <string name="tv_agreement">同意</string>
    <string name="tv_agreement1">如需注册请联系客服</string>
    <string name="tv_upload_image">上传头像</string>
    <string name="tv_nickname">姓名</string>
    <string name="hint_nickname">请填写姓名</string>
    <string name="tv_sex">性别</string>
    <string name="hint_sex">请选择性别</string>
    <string name="tv_my_trip">我的行程</string>
    <string name="tv_publish">发布跨城行程</string>
    <string name="tv_my_purse">我的钱包</string>
    <string name="tv_checkall">查看全部</string>
    <string name="tv_youhuiquan">优惠券</string>
    <string name="tv_feeaccount">账户余额</string>
    <string name="tv_charge">充值</string>
    <string name="tv_tixian">余额提现</string>
    <string name="tv_my_order">我的乘客订单</string>
    <string name="tv_topay">待支付</string>
    <string name="tv_togo">未出行</string>
    <string name="tv_tocancel">已取消</string>
    <string name="tv_toreply">待评价</string>
    <string name="tv_tocomplete">已完成</string>
    <string name="tv_changepwd">账户密码修改</string>
    <string name="tv_set">设置</string>
    <string name="tv_share">软件分享</string>
    <string name="tv_feedback">意见反馈</string>
    <string name="tv_clearcash">清除缓存</string>
    <string name="tv_update">检查更新</string>
    <string name="tv_exit">退出</string>
    <string name="tv_aboutus">关于我们</string>
    <string name="hint_oldpwd">旧密码</string>
    <string name="tv_paymoney">支付金额</string>
    <string name="tv_money">元</string>
    <string name="tv_yue">约</string>
    <string name="tv_topay_by_feeaccount">余额支付</string>
    <string name="tv_topay_by_weixin">微信支付</string>
    <string name="tv_topay_by_alipay">支付宝支付</string>
    <string name="tv_topay_by_unionpay">银联支付</string>
    <string name="tv_pop_exit">确定要退出当前账号吗?</string>
    <string name="tv_ok">确定</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_reply">星级评价</string>
    <string name="hint_reply">还想说点啥</string>
    <string name="tv_inputmoney">输入提现金额</string>
    <string name="hint_money">注：提现金额需为100的整数倍</string>
    <string name="hint_inputpwd">输入支付密码</string>
    <string name="tv_submit_apply">提交申请</string>
    <string name="hint_alipay">请输入支付宝账号</string>
    <string name="tv_currentmoney">当前钱包余额</string>
    <string name="tv_card_kind">卡类型</string>
    <string name="hint_card_kind">请选择卡类型</string>
    <string name="tv_card_owner">持卡人</string>
    <string name="hint_card_owner">请填写持卡人姓名</string>
    <string name="tv_card_no">卡号</string>
    <string name="hint_card_no">请填写卡号</string>
    <string name="tv_save">保存</string>
    <string name="hint_charge_money">输入充值金额</string>
    <string name="tv_start_position">出发地</string>
    <string name="tv_end_position">目的地</string>
    <string name="tv_start_time">出发时间</string>
    <string name="tv_person_count">乘车人数</string>
    <string name="tv_agree">我同意拼车</string>
    <string name="tv_thank_fee">感谢费</string>
    <string name="tv_beizhu">备注</string>
    <string name="tv_book_price">预估价格</string>
    <string name="tv_success">拼车成功</string>
    <string name="tv_failed">拼车失败</string>
    <string name="tv_submit_publish">确认发布</string>
    <string name="tv_set_using">使用说明</string>
    <string name="tv_position">常用位置</string>
    <string name="tv_xiuche">休车</string>
    <string name="tv_chuche">出车</string>
    <string name="tv_changestatus">切换登录状态</string>
    <string name="tv_my_account">我的账户</string>
    <string name="tv_history_order">历史订单</string>
    <string name="tv_my_person">我的乘客</string>
    <string name="tv_order_orderby">订单排序</string>
    <string name="tv_order_time">出发时间从早到晚</string>
    <string name="tv_order_distance">始发地距离由近到远</string>
    <string name="tv_position_love">偏好设置</string>
    <string name="tv_default">默认</string>
    <string name="tv_pop_distance">超过**公里不接单</string>


    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>

    <string name="pay_by_wxap">调起微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">支付成功！</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <string name="app_tip">提示</string>

</resources>
