<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/contentdescription"
        android:src="#60000000" />

    <LinearLayout
        android:id="@+id/father"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin_30" >

        <TextView
            android:id="@id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_5"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/tv_order_time"
            android:textColor="@color/cl_3f3f3f"
            android:textSize="@dimen/textsize_8" />

        <TextView
            android:id="@id/textview_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/tv_order_distance"
            android:textColor="@color/cl_3f3f3f"
            android:textSize="@dimen/textsize_8" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:src="@drawable/line_shadow" />

</FrameLayout>