<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:layout_marginLeft="15dp"
                android:hint="@string/hint_username1"
                android:inputType="phone"
                android:textColorHint="@color/cl_9c9c9c"
                android:textColor="@color/cl_5e5e5e"
                android:textSize="@dimen/textsize_8"/>

            <ImageView
                android:visibility="invisible"
                android:id="@+id/img_clearinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@mipmap/img_clearinput" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@color/cl_e4e4e4"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_code"
                    android:inputType="number"
                    android:textColorHint="@color/cl_9c9c9c"
                    android:textColor="@color/cl_5e5e5e"
                    android:textSize="@dimen/textsize_8" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:clickable="true" >

                    <LinearLayout
                        android:id="@id/linearlayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:gravity="bottom" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="1dp"
                            android:text="@string/tv_sendagain"
                            android:textColor="@color/cl_ff973f"
                            android:textSize="@dimen/textsize_7" />

                        <TextView
                            android:id="@+id/second"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="60"
                            android:textColor="@color/cl_ff973f"
                            android:textSize="@dimen/textsize_8" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="s"
                            android:textColor="@color/cl_ff973f"
                            android:textSize="@dimen/textsize_7" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/sendcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:background="@drawable/bg_sendcode"
                        android:text="@string/tv_sendcode"
                        android:textColor="@color/cl_ff973f"
                        android:textSize="@dimen/textsize_8" />
                </FrameLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_gravity="bottom"
                android:background="@color/xian" />
        </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_login"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:layout_marginLeft="15dp"
                android:hint="@string/hint_password1"
                android:inputType="textPassword"
                android:textColorHint="@color/cl_9c9c9c"
                android:textColor="@color/cl_5e5e5e"
                android:textSize="@dimen/textsize_8"/>

            <ImageView
                android:id="@+id/img_pwd_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@mipmap/img_eye_close" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@color/cl_e4e4e4"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <EditText
                android:id="@+id/edit_password_again"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:layout_marginLeft="15dp"
                android:hint="@string/hint_password2"
                android:inputType="textPassword"
                android:textColorHint="@color/cl_9c9c9c"
                android:textColor="@color/cl_5e5e5e"
                android:textSize="@dimen/textsize_8"/>

            <ImageView
                android:id="@+id/img_pwd_visible1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@mipmap/img_eye_close" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_login"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/tv_submit"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"/>

</LinearLayout>
